remove 2.10.7 and 0.13.18 support